src/main/java/com/example/seatitssu/global/error/exception/EntityNotFoundException.java
package com.example.seatitssu.global.error.exception;

import com.example.seatitssu.global.error.ErrorCode;

public class EntityNotFoundException extends BusinessException {
    public EntityNotFoundException(ErrorCode errorCode) {
        super(errorCode);
    }
}
